# ChangeLog for sys-devel/libtool
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/libtool/ChangeLog,v 1.199 2012/04/26 13:07:54 aballier Exp $

  26 Jul 2012; Fabian Groffen <grobian@gentoo.org>
  +files/2.4/libtool-2.4.2-solaris-postdeps-no-dedup.patch,
  libtool-2.4.2.ebuild:
  Add fix for Solaris and C++ libraries built by libtool generating aborts as
  soon as an exception is thrown.

  06 May 2012; Fabian Groffen <grobian@gentoo.org>
  +files/2.4/libtool-2.4.2-solaris_sol2.patch, libtool-2.4.2.ebuild:
  Add patch to fix libtool bug causing linker to be transformed into ld_sol2 on
  Solaris

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> libtool-2.4.2.ebuild,
  libtool-9999.ebuild:
  keyword ~amd64-fbsd

  09 Apr 2012; Mike Frysinger <vapier@gentoo.org> libtool-2.2.10.ebuild,
  libtool-2.4-r1.ebuild, libtool-2.4-r4.ebuild, libtool-2.4.2.ebuild,
  libtool-9999.ebuild:
  Drop old epunt_cxx calls #410877 by Greg Turner.

  13 Nov 2011; Mike Frysinger <vapier@gentoo.org> libtool-2.4.2.ebuild:
  Move into unstable.

  07 Nov 2011; Fabian Groffen <grobian@gentoo.org> libtool-2.4-r4.ebuild:
  Fix installation on Darwin (dosed failure)

*libtool-2.4-r4 (20 Oct 2011)

  20 Oct 2011; Mike Frysinger <vapier@gentoo.org> -libtool-2.4-r3.ebuild,
  +libtool-2.4-r4.ebuild, libtool-2.4.2.ebuild, libtool-9999.ebuild:
  Have system libtool build static objs by default even when USE=-static-libs
  #336167#20.

*libtool-2.4.2 (18 Oct 2011)

  18 Oct 2011; Mike Frysinger <vapier@gentoo.org> +libtool-2.4.2.ebuild:
  Version bump.

  04 Oct 2011; Mike Frysinger <vapier@gentoo.org> libtool-2.2.10.ebuild,
  libtool-2.4-r1.ebuild, libtool-2.4-r3.ebuild, libtool-9999.ebuild:
  Turn binutils dep into a blocker, and put it behind USE=test.

*libtool-2.4-r3 (24 Sep 2011)

  24 Sep 2011; Mike Frysinger <vapier@gentoo.org> -libtool-2.4-r2.ebuild,
  +libtool-2.4-r3.ebuild, libtool-9999.ebuild: