@@ -21,7 +21,7 @@ AUX 2.2.6a/libtool-2.2.6a-winnt.patch 48752 SHA256 dd46a5a2c5ae63ad039c16b188cd7
 AUX 2.2.6b/libtool-2.2.6b-irix.patch 1330 SHA256 5fd946386ff24f491d5a6b9f865215193a07fc1da610f4763b8c12d29190e8f6 SHA512 91a3ea994ee0839d1fd054a86f343980eb017dbd171791db9eed9cf287536ba03ad72af44f1a870369042b050e6ce963655dc6b0446bf4e17a77c68d69048a8f WHIRLPOOL 91e1d6f8539c98785448807295520fe5e8d595c3147b0e313373321f357be6486b35391a7f54d655386881aaa12aeebb24e7766b4f472c4db77c5bbe5aeb5f7b
 AUX 2.2.6b/libtool-2.2.6b-mint.patch 6756 SHA256 e6bf0d9ea204d5f798574b040704fd04dff19a6dcd80bc53e154e3922af7b1b9 SHA512 54d37024b82fa6bea636cdbe3e978df7cbba41355a4f4bd1f328ed270137fd6d2d8006963c235050958cedd25ae775bf2d7da24e2cd3c5efb9634e252cb29dab WHIRLPOOL dfea2f83d5b6a4e6d9824fb9175dcf79d8b9522dbbc6d47d64f6172d4039b6e5a16cc9bdcaf1fac0ba30e0abc4a457bc1f668e67c64f277ff76e0baa9219ee53
 AUX 2.4/libtool-2.4-interix.patch 3819 SHA256 b2d762b8d16d15b7506a78b120540ea247de283ba3b096092e2715dd7104c891 SHA512 1fd212a94cdf0751c83868634642e18d8b59f71ece1a2c611678db1f61a9d97dbff0ed86b094386d4864885102e6778c9cb9fc6ad2a23a42de176d105b759d68 WHIRLPOOL 3f4c2f24eac459ba1ac142d05c0406769faf8116faf6b14de4f99e2bb48a06396008f9bfc75f8a84d7d3b65e1c488e3a7d14f531f8f0c5eecbfb77e04ccda16c
-AUX 2.4/libtool-2.4.2-solaris-postdeps-no-dedup.patch 1202 SHA256 a44860abe7afb375c944d96244fa26c4e42e794fffab4b3fdd7421a1839f33bd SHA512 4ded95fba3cb3cf6dd20b3a373eca01283a88fd76cb30b020efed2cb9e74d294a2ec61f6d9d7fad7a5585aeef60bed440f56e169b3ff66abffdefbd4adea299e WHIRLPOOL 35423a6be7e113b03389ace76c1deb9cd719e3d3232a82b128179da52734b2545c8eefb9eb95b5a39f12d048cdbe4729f75c0d7c24aafb29a00c794e8a59571e
+AUX 2.4/libtool-2.4.2-solaris-postdeps-no-dedup.patch 1196 SHA256 5a8eb789fe7872989d5846e1ef03de0a42da401c0c3d853144ad1a5886dead56 SHA512 444106ecaea6258fd689c7ba9e95bc0064d8f9a62a41ecc3131a99d077f08cb1fd46a175553c758d79538e3a12d64edb664589c29b96acfe49bc6f81cdd6aaf9 WHIRLPOOL d02f495cac58160ab90b63bec820d5be88f1cc9e9f2d719e29d5b26cd42d8b3f8e4c4cc937b53ff6f259e73a7729d6e0f2c465314daf7831d718e0bf30e332fd
 AUX 2.4/libtool-2.4.2-solaris_sol2.patch 409 SHA256 0ed8f28d2391e5708986c25243d6805f3d6cad1d94f00d86677a854c48b31582 SHA512 90db029fb87034f82a8b165b6e1879b2089d1515ab8279c099b3b5f2c4677a436c786173f6075609788c5d6234c3a4bef1febcb776a52c6d7d3f7903519cb6d2 WHIRLPOOL d62059c7bd52de7186818c34cc374c2f4f5e7d446a6805e85dab10b0d0928039947ab878c168a0587b33f763c49e8b201583b82d80dc9a081005d0a171cf34cd
 AUX libtool-1.5.23b-aixrtl.patch 1206 SHA256 b24fc8f637cea55419782760f72acd5c6f78f8f6e2a606e693013b7b699d263d SHA512 34ae647f50e9f245873dbb4aba7948177be743105cb10a3796c06e30499d17eab211147029a3bbf6bcf2074954307e6cf03de1ebc800696fe806f5139b4b7a6b WHIRLPOOL a70ab22711e68b6ba7cd00cbecb9121235cd00164c3602250a97a787954f3fee28d90db3642e0aa5b581df67e1a8cfaca4c7a6e602402c9e0b48833b4a997617
 AUX libtool-2.4-openmp.patch 2289 SHA256 355bb3a6f92ae46dd723551b0f11e5e5f8a584e21880e756e815704e8f7b74da SHA512 403b4b78b480644f341ba89961313f7c872174ad04e2f8d580950290837f605aa776430335fae7a040a530a6f91e0aff1d5d32ca612a1bb81f4793b5a54c37bf WHIRLPOOL bdaae61a6f0424b5ed42054fbd997ef37ca75a132f65d7b103a14a7551bdd6817af732ce168e35d445bdf618593e8aa92548e75b31628f7f390c30b74e846850
@@ -33,12 +33,12 @@ EBUILD libtool-1.5.26.ebuild 3501 SHA256 3df5bef34987b8bbd65e7195940a524e74d74e6
 EBUILD libtool-2.4-r01.1.ebuild 3259 SHA256 2d7704817870b62dc8fbef54c328a367a5678dd38512f6fe3849cd4ffea129da SHA512 f2455edc3c130302c77fd4bfb661d80f4efa6f18383aed907a0d98b7d964925c236d323f8648dc0c8fe503555176b63e7e0a2164e30a45b6dcff7501fc20721d WHIRLPOOL 7eaaad49a3a230befffce729f4ac363777ec48b89651ac9fcd302f2f12dc6662845a1c8595df605240d6efe2b99e9f8e5e8c3f911e367c7217e535b18c746508
 EBUILD libtool-2.4-r4.ebuild 4070 SHA256 6eec4f2583eaa3210b1923c1cb6e34f7bd0b5944d7559425f0107a262a7781da SHA512 5e57c92d2569acda9d8634c138f40f24498df43dc7503f5286d1acb6395030e16e83539e48a9be45fd4a997c37e316f580196d9ef97f5b89e7fbfd2313da25f7 WHIRLPOOL 5ac855424d87b3be5468274c3f7f0dd259d76bbff12f6c895f371fba40903c545d9de017e66356a2eaee22b48ea61fd088f71d2a1115e04e0f30fff352199c97
 EBUILD libtool-2.4.2.ebuild 4150 SHA256 4cbc89c8318da7beb9efb75807b7c7c13b7e459395fd05beb488c930c1fae1e8 SHA512 bc8916eaed682d0f6157e4a6da71b9f9320137274821458ee50b88b86621a27b989e524af8051ae0e475868774a409b8e5b832affe53627a59b126debf1f16ba WHIRLPOOL 5a8e288d04774cb1d8224e30961fe47ade882ad9e3a2447f032acbd5a162b68e76cbf4b0907197feeddd3df4c279b0e903a594525b07a08a855e544d043736b1
-MISC ChangeLog 30434 SHA256 e755c970c32003000cd7ad765cccfe4205f9c0c3c613f4073bdab2401d0ab176 SHA512 071b926e8044ed3dc8d4eb968567a20bbb3edd50dfce4e904dcf9cd088af319987ce10704a1e866bec06313d24ec55414dc5becaab7fefad4c626df7cc7a2f76 WHIRLPOOL 522aa85b0f74e9dc2bade25c3f4c57acb2b42722df8c500771a40756f9bfe6c0081b8693964a6eb72723e1ea8a122bec67337ae7d07a71e287b8c6cf9a495465
+MISC ChangeLog 30636 SHA256 bb5e76f1299380850247ffd1b231f1a84871883212e6de76a95cdfd53285c2ff SHA512 3747d627aadfccde4c9c7236f1a9d5d4ee429a226c39c3110264c98fa425b95514b99499af3484e1f09442cd92fa7e43cdce368ebd1b43bd651eae1827ee78bb WHIRLPOOL fc5595281ba68fce4aee33c7b6fe46f6ccab57ae8d17968c8361254a0237363cf4b7efee18d2e30894e78128f1305625f26e9dc2db403f99317768d51d690d0c
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (Darwin)
 
-iEYEAREIAAYFAlARZ18ACgkQX3X2B8XHTom0pwCfeZpqZoIXAoRPZgdEqH5R1wKS
-9EIAn1vvc6PLdbjiGns3kXqNeX5dDJVw
-=n3ir
+iEYEAREIAAYFAlARdnwACgkQX3X2B8XHTomsZQCeI0EgEvrM8/lknFQuK8i68RWf
+xVQAmwZerBk0j7O+OxMbBLCs9HZNaN1w
+=tN7n
 -----END PGP SIGNATURE-----
