@@ -3,6 +3,11 @@
 # $Header: /var/cvsroot/gentoo-x86/sys-devel/libtool/ChangeLog,v 1.199 2012/04/26 13:07:54 aballier Exp $
 
   26 Jul 2012; Fabian Groffen <grobian@gentoo.org>
+  files/2.4/libtool-2.4.2-solaris-postdeps-no-dedup.patch:
+  Update patch comments, I'm not sure what the reason is for GCC to emit double
+  -lgcc_s.
+
+  26 Jul 2012; Fabian Groffen <grobian@gentoo.org>
   +files/2.4/libtool-2.4.2-solaris-postdeps-no-dedup.patch,
   libtool-2.4.2.ebuild:
   Add fix for Solaris and C++ libraries built by libtool generating aborts as
